syntax = "proto3";

package proto;

service Langd {
  rpc Load (EmptyRequest) returns (LoadReply) {}
  rpc Shutdown (EmptyRequest) returns (EmptyReply) {}
  rpc Startup (EmptyRequest) returns (EmptyReply) {}
}

message EmptyRequest {
}

message EmptyReply {
}

message LoadReply {
  float cpuLoad = 1;
  int32 memoryLoad = 2;
}